more changes in notebooks

--- a/notebooks/data_enhanced.ipynb
+++ b/notebooks/data_enhanced.ipynb
@@ -665,247 +665,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
-       "columns": [
-        {
-         "name": "index",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "TASK_ID",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "FORECAST",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "HOURLY_RATE",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "COST",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "QUALITY_EVALUATION",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "_work_ready",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "_time_taken",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "_time_reception",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "_time_to_close",
-         "rawType": "float64",
-         "type": "float"
-        }
-       ],
-       "conversionMethod": "pd.DataFrame",
-       "ref": "c0a08166-a34a-4c27-a66e-77171294c0f5",
-       "rows": [
-        [
-         "0",
-         "-8.218710078882168",
-         "-0.342461018065221",
-         "1.4126717830697257",
-         "-0.3124099592603385",
-         "0.011245702314141843",
-         "-0.2611666079485416",
-         "-0.23180661801225744",
-         "-0.11642147932183555",
-         "-0.10165793090135204"
-        ],
-        [
-         "1",
-         "-8.218710078882168",
-         "-0.1978758687843637",
-         "0.2741432282770459",
-         "-0.17575792278948482",
-         "0.011245702314141843",
-         "-0.2609001343247225",
-         "0.04059279531971061",
-         "-0.10194758044785644",
-         "-0.10165793090135204"
-        ],
-        [
-         "2",
-         "-8.218710078882168",
-         "-0.33320756851124617",
-         "-1.1490174652138039",
-         "-0.3183884858559383",
-         "-0.6934168202671614",
-         "-0.2611666079485416",
-         "-0.2475231010160904",
-         "-0.11689329402197204",
-         "-0.10165793090135204"
-        ],
-        [
-         "3",
-         "-8.218710078882168",
-         "-0.31354398820904955",
-         "0.2741432282770459",
-         "-0.2896346198485295",
-         "-0.6934168202671614",
-         "17.703238013373074",
-         "-0.24751963771000757",
-         "0.31750551744641214",
-         "-0.10164630494669905"
-        ],
-        [
-         "4",
-         "-8.218710078882168",
-         "-0.3713780479213925",
-         "-2.2875460200064834",
-         "-0.3465729683780519",
-         "0.7159082248954451",
-         "-0.2611666079485416",
-         "-0.2475231010160904",
-         "-0.11689820875843179",
-         "-0.10165211792402554"
-        ]
-       ],
-       "shape": {
-        "columns": 9,
-        "rows": 5
-       }
-      },
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>TASK_ID</th>\n",
-       "      <th>FORECAST</th>\n",
-       "      <th>HOURLY_RATE</th>\n",
-       "      <th>COST</th>\n",
-       "      <th>QUALITY_EVALUATION</th>\n",
-       "      <th>_work_ready</th>\n",
-       "      <th>_time_taken</th>\n",
-       "      <th>_time_reception</th>\n",
-       "      <th>_time_to_close</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>-8.21871</td>\n",
-       "      <td>-0.342461</td>\n",
-       "      <td>1.412672</td>\n",
-       "      <td>-0.312410</td>\n",
-       "      <td>0.011246</td>\n",
-       "      <td>-0.261167</td>\n",
-       "      <td>-0.231807</td>\n",
-       "      <td>-0.116421</td>\n",
-       "      <td>-0.101658</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>-8.21871</td>\n",
-       "      <td>-0.197876</td>\n",
-       "      <td>0.274143</td>\n",
-       "      <td>-0.175758</td>\n",
-       "      <td>0.011246</td>\n",
-       "      <td>-0.260900</td>\n",
-       "      <td>0.040593</td>\n",
-       "      <td>-0.101948</td>\n",
-       "      <td>-0.101658</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>-8.21871</td>\n",
-       "      <td>-0.333208</td>\n",
-       "      <td>-1.149017</td>\n",
-       "      <td>-0.318388</td>\n",
-       "      <td>-0.693417</td>\n",
-       "      <td>-0.261167</td>\n",
-       "      <td>-0.247523</td>\n",
-       "      <td>-0.116893</td>\n",
-       "      <td>-0.101658</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>-8.21871</td>\n",
-       "      <td>-0.313544</td>\n",
-       "      <td>0.274143</td>\n",
-       "      <td>-0.289635</td>\n",
-       "      <td>-0.693417</td>\n",
-       "      <td>17.703238</td>\n",
-       "      <td>-0.247520</td>\n",
-       "      <td>0.317506</td>\n",
-       "      <td>-0.101646</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>-8.21871</td>\n",
-       "      <td>-0.371378</td>\n",
-       "      <td>-2.287546</td>\n",
-       "      <td>-0.346573</td>\n",
-       "      <td>0.715908</td>\n",
-       "      <td>-0.261167</td>\n",
-       "      <td>-0.247523</td>\n",
-       "      <td>-0.116898</td>\n",
-       "      <td>-0.101652</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   TASK_ID  FORECAST  HOURLY_RATE      COST  QUALITY_EVALUATION  _work_ready  \\\n",
-       "0 -8.21871 -0.342461     1.412672 -0.312410            0.011246    -0.261167   \n",
-       "1 -8.21871 -0.197876     0.274143 -0.175758            0.011246    -0.260900   \n",
-       "2 -8.21871 -0.333208    -1.149017 -0.318388           -0.693417    -0.261167   \n",
-       "3 -8.21871 -0.313544     0.274143 -0.289635           -0.693417    17.703238   \n",
-       "4 -8.21871 -0.371378    -2.287546 -0.346573            0.715908    -0.261167   \n",
-       "\n",
-       "   _time_taken  _time_reception  _time_to_close  \n",
-       "0    -0.231807        -0.116421       -0.101658  \n",
-       "1     0.040593        -0.101948       -0.101658  \n",
-       "2    -0.247523        -0.116893       -0.101658  \n",
-       "3    -0.247520         0.317506       -0.101646  \n",
-       "4    -0.247523        -0.116898       -0.101652  "
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 5\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m preprocessing\n\u001b[1;32m      3\u001b[0m scaler \u001b[38;5;241m=\u001b[39m preprocessing\u001b[38;5;241m.\u001b[39mStandardScaler()\n\u001b[0;32m----> 5\u001b[0m df_numeric \u001b[38;5;241m=\u001b[39m \u001b[43mdf\u001b[49m\u001b[38;5;241m.\u001b[39mselect_dtypes(include\u001b[38;5;241m=\u001b[39m[np\u001b[38;5;241m.\u001b[39mnumber])\n\u001b[1;32m      6\u001b[0m df_scaled \u001b[38;5;241m=\u001b[39m df_numeric\u001b[38;5;241m.\u001b[39mcopy()\n\u001b[1;32m      9\u001b[0m df_scaled \u001b[38;5;241m=\u001b[39m scaler\u001b[38;5;241m.\u001b[39mfit_transform(df_scaled)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
     }
    ],
    "source": [
@@ -2119,35 +1891,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "QUALITY_EVALUATION\n",
-       "8     8121\n",
-       "7     7985\n",
-       "6     5524\n",
-       "5     4051\n",
-       "9     3690\n",
-       "4      865\n",
-       "10     494\n",
-       "3      203\n",
-       "2       64\n",
-       "1       15\n",
-       "0        5\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# original value counts for quality evaluation\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mdf\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mQUALITY_EVALUATION\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mvalue_counts()\n\u001b[1;32m      3\u001b[0m plt\u001b[38;5;241m.\u001b[39mplot(df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mQUALITY_EVALUATION\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mvalue_counts(), marker\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mo\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
     }
    ],
    "source": [
     "# original value counts for quality evaluation\n",
-    "df['QUALITY_EVALUATION'].value_counts()"
+    "df['QUALITY_EVALUATION'].value_counts()\n",
+    "plt.plot(df['QUALITY_EVALUATION'].value_counts(), marker='o')"
    ]
   },
   {
