--- a/notebooks/data_prep.ipynb
+++ b/notebooks/data_prep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,9 +260,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/nix/store/zyr273098nb8bh539d3fmz8vil3c3inz-python3.12-tqdm-4.67.1/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "import os\n",
@@ -283,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +453,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "a33a8731-c484-4303-bd23-9006a977c378",
+       "ref": "c2843560-fb07-4d97-9f58-4d0069443b04",
        "rows": [
         [
          "0",
@@ -1912,7 +1921,7 @@
        "[31017 rows x 18 columns]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1923,7 +1932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1935,7 +1944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1948,7 +1957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2052,7 +2061,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "ee6a3726-c8fe-4ffb-a3f2-62a81c4e67af",
+       "ref": "9b85dece-069d-4f23-b258-e98a2c9814d5",
        "rows": [
         [
          "0",
@@ -3481,7 +3490,7 @@
        "[31017 rows x 18 columns]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3509,10 +3518,206 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "one_hot_columns = encoded_df.columns.tolist()\n",
+    "\n",
+    "categorical_vector_series = encoded_df[one_hot_columns].apply(list, axis=1)\n",
+    "\n",
+    "new_vector_column_name = 'categorical_encoding_vector'\n",
+    "positives[new_vector_column_name] = categorical_vector_series"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 31017 entries, 0 to 31016\n",
+      "Data columns (total 19 columns):\n",
+      " #   Column                        Non-Null Count  Dtype   \n",
+      "---  ------                        --------------  -----   \n",
+      " 0   Unnamed: 0                    31017 non-null  int64   \n",
+      " 1   PM_task                       31017 non-null  category\n",
+      " 2   TASK_TYPE_task                31017 non-null  category\n",
+      " 3   SOURCE_LANG_task              31017 non-null  object  \n",
+      " 4   TARGET_LANG_task              31017 non-null  object  \n",
+      " 5   TRANSLATOR_NAME               31017 non-null  category\n",
+      " 6   FORECAST_task                 31017 non-null  float64 \n",
+      " 7   HOURLY_RATE_task              31017 non-null  int64   \n",
+      " 8   INDUSTRY_task                 31017 non-null  object  \n",
+      " 9   HOURLY_RATE_translator        31017 non-null  float64 \n",
+      " 10  TASK_TYPE_translator          31017 non-null  category\n",
+      " 11  PM_translator                 31017 non-null  category\n",
+      " 12  FORECAST_mean                 31017 non-null  float64 \n",
+      " 13  HOURLY_RATE_mean              31017 non-null  float64 \n",
+      " 14  QUALITY_EVALUATION_mean       31017 non-null  float64 \n",
+      " 15  SOURCE_LANG_EMBED_translator  31017 non-null  object  \n",
+      " 16  TARGET_LANG_EMBED_translator  31017 non-null  object  \n",
+      " 17  INDUSTRY_EMBED_translator     31017 non-null  object  \n",
+      " 18  categorical_encoding_vector   31017 non-null  object  \n",
+      "dtypes: category(5), float64(5), int64(2), object(7)\n",
+      "memory usage: 3.5+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "positives.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 31017 entries, 0 to 31016\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column                        Non-Null Count  Dtype  \n",
+      "---  ------                        --------------  -----  \n",
+      " 0   SOURCE_LANG_task              31017 non-null  object \n",
+      " 1   TARGET_LANG_task              31017 non-null  object \n",
+      " 2   FORECAST_task                 31017 non-null  float64\n",
+      " 3   HOURLY_RATE_task              31017 non-null  int64  \n",
+      " 4   INDUSTRY_task                 31017 non-null  object \n",
+      " 5   HOURLY_RATE_translator        31017 non-null  float64\n",
+      " 6   FORECAST_mean                 31017 non-null  float64\n",
+      " 7   HOURLY_RATE_mean              31017 non-null  float64\n",
+      " 8   QUALITY_EVALUATION_mean       31017 non-null  float64\n",
+      " 9   SOURCE_LANG_EMBED_translator  31017 non-null  object \n",
+      " 10  TARGET_LANG_EMBED_translator  31017 non-null  object \n",
+      " 11  INDUSTRY_EMBED_translator     31017 non-null  object \n",
+      " 12  categorical_encoding_vector   31017 non-null  object \n",
+      "dtypes: float64(5), int64(1), object(7)\n",
+      "memory usage: 3.1+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "columns_to_drop = [\n",
+    "    'Unnamed: 0',\n",
+    "    'PM_task',\n",
+    "    'TASK_TYPE_task',\n",
+    "    'TASK_TYPE_translator',\n",
+    "    'TRANSLATOR_NAME',\n",
+    "    'PM_translator',\n",
+    "]\n",
+    "\n",
+    "positives.drop(columns=columns_to_drop, inplace=True)\n",
+    "positives.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "scalar_columns = [\n",
+    "    'FORECAST_task',\n",
+    "    'FORECAST_mean',\n",
+    "    'HOURLY_RATE_task',\n",
+    "    'HOURLY_RATE_translator',\n",
+    "    'HOURLY_RATE_mean',\n",
+    "    'QUALITY_EVALUATION_mean'\n",
+    "]\n",
+    "\n",
+    "scalar = StandardScaler()\n",
+    "\n",
+    "scalar_data = positives[scalar_columns].values\n",
+    "scalar.fit(scalar_data)\n",
+    "scalar_data = scalar.transform(scalar_data)\n",
+    "\n",
+    "positives[scalar_columns] = scalar_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 31017 entries, 0 to 31016\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column                        Non-Null Count  Dtype  \n",
+      "---  ------                        --------------  -----  \n",
+      " 0   SOURCE_LANG_task              31017 non-null  object \n",
+      " 1   TARGET_LANG_task              31017 non-null  object \n",
+      " 2   FORECAST_task                 31017 non-null  float64\n",
+      " 3   HOURLY_RATE_task              31017 non-null  float64\n",
+      " 4   INDUSTRY_task                 31017 non-null  object \n",
+      " 5   HOURLY_RATE_translator        31017 non-null  float64\n",
+      " 6   FORECAST_mean                 31017 non-null  float64\n",
+      " 7   HOURLY_RATE_mean              31017 non-null  float64\n",
+      " 8   QUALITY_EVALUATION_mean       31017 non-null  float64\n",
+      " 9   SOURCE_LANG_EMBED_translator  31017 non-null  object \n",
+      " 10  TARGET_LANG_EMBED_translator  31017 non-null  object \n",
+      " 11  INDUSTRY_EMBED_translator     31017 non-null  object \n",
+      " 12  categorical_encoding_vector   31017 non-null  object \n",
+      "dtypes: float64(6), object(7)\n",
+      "memory usage: 3.1+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "positives.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### To Tensors"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "\n",
+    "class PositivesDataset(Dataset):\n",
+    "    def __init__(self, dataframe):\n",
+    "        self.dataframe = dataframe\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.dataframe)\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        row = self.dataframe.iloc[idx]\n",
+    "        source_lang = torch.tensor(row['SOURCE_LANG_task'], dtype=torch.float32)\n",
+    "        target_lang = torch.tensor(row['TARGET_LANG_task'], dtype=torch.float32)\n",
+    "        industry_vector = torch.tensor(row['INDUSTRY_task'], dtype=torch.float32)\n",
+    "        categorical_vector = torch.tensor(row['categorical_encoding_vector'], dtype=torch.float32)\n",
+    "        forecast = torch.tensor(row['FORECAST_task'], dtype=torch.float32)\n",
+    "        forecast_mean = torch.tensor(row['FORECAST_mean'], dtype=torch.float32)\n",
+    "        hourly_rate = torch.tensor(row['HOURLY_RATE_task'], dtype=torch.float32)\n",
+    "        hourly_rate_mean = torch.tensor(row['HOURLY_RATE_mean'], dtype=torch.float32)\n",
+    "        quality_evaluation = torch.tensor(row['QUALITY_EVALUATION_mean'], dtype=torch.float32)\n",
+    "\n",
+    "        target_lang_translator = torch.tensor(row['TARGET_LANG_EMBED_translator'], dtype=torch.float32)\n",
+    "        source_lang_translator = torch.tensor(row['SOURCE_LANG_EMBED_translator'], dtype=torch.float32)\n",
+    "        industry_translator = torch.tensor(row['INDUSTRY_EMBED_translator'], dtype=torch.float32)\n"
+   ]
   }
  ],
  "metadata": {
