feat: training loop

--- a/notebooks/translator_embedded.ipynb
+++ b/notebooks/translator_embedded.ipynb
@@ -29,7 +29,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 16,
+            "execution_count": 2,
             "id": "09a012ab",
             "metadata": {},
             "outputs": [],
@@ -78,7 +78,7 @@
                                 }
                             ],
                             "conversionMethod": "pd.DataFrame",
-                            "ref": "4ac5ac05-db63-435f-be87-4484f5a4ae4f",
+                            "ref": "2b6ad85b-b2a5-4079-9d0f-0e71e5917ed0",
                             "rows": [
                                 [
                                     "0",
@@ -819,7 +819,7 @@
                                 }
                             ],
                             "conversionMethod": "pd.DataFrame",
-                            "ref": "26d475c4-f82a-4f97-b91c-668eb6677f66",
+                            "ref": "6fe72cfa-6428-47f6-bd02-e8e744ea6c71",
                             "rows": [
                                 [
                                     "0",
@@ -2957,7 +2957,7 @@
                                 }
                             ],
                             "conversionMethod": "pd.DataFrame",
-                            "ref": "edb74e90-9f87-422f-8cfb-25528b076eb0",
+                            "ref": "d7fdf3ce-59cb-414a-8e0b-62047674cbb0",
                             "rows": [
                                 [
                                     "0",
@@ -3879,7 +3879,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 17,
+            "execution_count": 9,
             "id": "ffa07095",
             "metadata": {},
             "outputs": [
@@ -3906,7 +3906,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 19,
+            "execution_count": 10,
             "id": "a931a8d2",
             "metadata": {},
             "outputs": [
@@ -3981,7 +3981,7 @@
                                 }
                             ],
                             "conversionMethod": "pd.DataFrame",
-                            "ref": "741aecb4-e6c3-4fff-a8ce-be0d08f22b15",
+                            "ref": "74448a08-72b7-4996-8f7b-c961c9ef60d5",
                             "rows": [
                                 [
                                     "0",
@@ -5012,7 +5012,7 @@
                             "[228 rows x 12 columns]"
                         ]
                     },
-                    "execution_count": 19,
+                    "execution_count": 10,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -5038,7 +5038,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 22,
+            "execution_count": 11,
             "id": "33ca07af",
             "metadata": {},
             "outputs": [
@@ -5062,7 +5062,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 23,
+            "execution_count": 12,
             "id": "ff0f5aa9",
             "metadata": {},
             "outputs": [
@@ -5142,7 +5142,7 @@
                                 }
                             ],
                             "conversionMethod": "pd.DataFrame",
-                            "ref": "95cad1f8-342e-4058-a865-291760f0b7fb",
+                            "ref": "29adb60f-6294-4b5e-9aa1-343a7d4312cf",
                             "rows": [
                                 [
                                     "0",
@@ -6248,7 +6248,7 @@
                             "[228 rows x 13 columns]"
                         ]
                     },
-                    "execution_count": 23,
+                    "execution_count": 12,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -6269,14 +6269,13 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 24,
+            "execution_count": 13,
             "id": "c37983aa",
             "metadata": {},
             "outputs": [],
             "source": [
-                "translators_df.to_csv(\n",
-                "    \"../data/translators_enhanced.csv\",\n",
-                "    index=False,\n",
+                "translators_df.to_pickle(\n",
+                "    \"../data/translators_enhanced.pkl\",\n",
                 ")"
             ]
         },
